hvantran/project-management#50 Remove code smell